--- a/example/cassandra.yaml
+++ b/example/cassandra.yaml
@@ -2,5 +2,11 @@ cassandra:
   username: zipkinuser
   password: my-super-secret-password
   contactPoints: cassandra-1.me.com,cassandra-2.me.com
-  localdc: thisdc
 
+ingress:
+  host: zipkin.example.com
+
+configmap:
+  localdc:
+    name: cassandra # use this notation if you want to reuse values from existing configmaps, this takes precedence over the .cassandra field
+    key: local.dc
