--- a/values.yaml
+++ b/values.yaml
@@ -8,7 +8,8 @@ collector:
   probeStartupDelay: 150
   queryPort: 9411
   resources:
-    ramMb: 900
+    ramMb: 700
+    javaOptsHeap: 900
     cpuRequest: 150m
     cpuLimit: 200m
 
@@ -18,7 +19,8 @@ ui:
   probeStartupDelay: 150
   queryPort: 9411
   resources:
-    ramMb: 900
+    ramMb: 700
+    javaOptsHeap: 900
     cpuRequest: 150m
     cpuLimit: 200m
 
@@ -27,7 +29,8 @@ dependencies:
   cron: "0 22 * * *"
   imageVersion: 1.6.1
   resources:
-    ramMb: 900
+    ramMb: 700
+    javaOptsHeap: 900
     cpuRequest: 150m
     cpuLimit: 200m
 
