--- a/templates/secrets.yaml
+++ b/templates/secrets.yaml
@@ -11,6 +11,6 @@ metadata:
   # file "pre-install-XXX.yaml", but Helm itself doesn't care about file names.
 type: Opaque
 data:
-{{if eq .Values.storageMethod "cassandra"}}
+{{if eq .Values.storageMethod "cassandra3"}}
   cassandra.password: {{ b64enc .Values.cassandra.password }}
 {{ end }}
