--- a/templates/zipkin-collector.yaml
+++ b/templates/zipkin-collector.yaml
@@ -56,7 +56,7 @@ spec:
               value: "false"
             - name: STORAGE_TYPE
               value: "{{ .Values.storageMethod }}"
-{{if eq .Values.storageMethod "cassandra"}}
+{{if eq .Values.storageMethod "cassandra3"}}
             - name: CASSANDRA_USERNAME
               valueFrom:
                 configMapKeyRef:
