--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v1
 description: Zipkin distributed tracing
 name: zipkin-helm
-version: 0.5.0
+version: 0.6.0
+icon: https://avatars1.githubusercontent.com/u/11860887
