--- a/templates/collector-service.yaml
+++ b/templates/collector-service.yaml
@@ -3,7 +3,11 @@ apiVersion: v1
 metadata:
   name: zipkin
   labels:
-      app: zipkin
+    app: zipkin
+    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    component: collector
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
 spec:
   ports:
    - port: {{ .Values.collector.queryPort }}
