--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -18,7 +18,7 @@ data:
 {{ end }}
 
 {{if eq .Values.configmap.contactPoints.name .Values.configmap.name}}
-  cassandra.contactpoints: "{{ .Values.cassandra.contactPoints }}"
+  cassandra.contactpoints: "{{ .Release.Name }}-{{ .Values.cassandra.contactPoints }}"
 {{ end }}
 
 {{ end }}
