--- a/templates/storage.yaml
+++ b/templates/storage.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: zipkin-cassandra
+  name: {{ .Release.Name }}-zipkin-cassandra
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
@@ -17,7 +17,7 @@ spec:
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: zipkin-cassandra-storage
+  name: {{ .Release.Name }}-zipkin-cassandra-storage
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
@@ -31,7 +31,12 @@ parameters:
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
-  name: zipkin-cassandra
+  name: {{ .Release.Name }}-zipkin-cassandra
+  labels:
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    app: zipkin-cassandra
 spec:
   serviceName: zipkin-cassandra
   replicas: {{ .Values.cassandra.replicas }}
@@ -39,7 +44,7 @@ spec:
   - metadata:
       name: data-storage
     spec:
-      storageClassName: zipkin-cassandra-storage
+      storageClassName: {{ .Release.Name }}-zipkin-cassandra-storage
       accessModes:
        - ReadWriteOnce
       resources:
@@ -49,6 +54,9 @@ spec:
     metadata:
       labels:
         app: zipkin-cassandra
+        heritage: {{ .Release.Service }}
+        release: {{ .Release.Name }}
+        chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     spec:
       initContainers:
       - name: volume-mount-hack
@@ -67,10 +75,6 @@ spec:
             exec:
               command: ["/bin/sh", "-c", "PID=$(pidof java) && kill $PID && while ps -p $PID > /dev/null; do sleep 1; done"]
         ports:
-        - containerPort: 9160
-        - containerPort: 7000
-        - containerPort: 7001
-        - containerPort: 7199
         - containerPort: 9042
         livenessProbe:
           initialDelaySeconds: {{ .Values.cassandra.probeStartupDelay }}
